# prestocard-to-sqlite

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
prestocard_to_sqlite/: cli.py  service.py
tests/: fixtures.py  test_service.py
