[tool.poetry]
name = "prestocard-to-sqlite"
version = "0.1.0"
description = "Save transacation history from Presto Card to a SQLite database."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "prestocard_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.5.3"
sqlite-utils = "^3.30"
pytz = "^2022.7.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

pytest = "^7.2.1"
pytest-cov = "^4.0.0"

mypy = "^0.991"

ipython = "^8.8.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
